--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -768,20 +768,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "櫻井桃華ですわ｡ｱﾅﾀ…わたくしを見る目つきが普通の人のｿﾚと違ってよ｡…ｳﾌ｡いったいﾅﾆを考えていらしたの? 教えて下さる? ふぅん､わたくしをｱｲﾄﾞﾙに…｡ それは面白そうですわね!",
-                        "comments_my_1": "ごきげんようですわ!",
-                        "comments_my_2": "どこを見ていらして?",
-                        "comments_my_3": "この聖なる日に､ﾅﾆを考えて…",
-                        "comments_my_4": "ﾌﾟﾛﾃﾞｭｰｻｰ､わたくし喉が渇きましたのよ",
-                        "comments_my_max": "OOちゃまはわたくしの横に座るの! よろしくて?",
-                        "comments_work_1": "おはようですの!",
-                        "comments_work_2": "今日もがんばりますわ!",
-                        "comments_work_3": "こ､こんなこともするんですの",
-                        "comments_work_4": "ﾌﾟﾛﾃﾞｭｰｻｰ､わたくしちゃんと出来ていますか…?",
-                        "comments_work_max": "OOちゃま､わたくしだけを見てください…｡",
-                        "comments_work_love_up": "OOちゃま､いつも見ていて下さるの､嬉しいですわ!",
-                        "comments_live": "行きますわよ!",
-                        "comments_love_max": "OOちゃまがわたくしを見る目…とってもｿﾞｸｿﾞｸしましたわ｡このままﾄｯﾌﾟｱｲﾄﾞﾙになって､視線を釘づけにしますわ!"
+                        "comment": "사쿠라이 모모카예요. 당신… 저를 보는 눈빛이 보통 사람들관 다르네요. …우후. 대체 뭘 생각하고 계셨나요? 가르쳐 주시겠어요? 흐응, 저를 아이돌로…. 그건 재밌을 것 같네요!",
+                        "comments_my_1": "안녕하셔요!",
+                        "comments_my_2": "어딜 보고 계세요?",
+                        "comments_my_3": "이 성스러운 날에, 무슨 생각을…",
+                        "comments_my_4": "프로듀서, 저 목이 말라요.",
+                        "comments_my_max": "OO 쨔마는 제 곁에 앉는군요! 잘 부탁해요?",
+                        "comments_work_1": "안녕하세요!",
+                        "comments_work_2": "오늘도 열심히 할게요!",
+                        "comments_work_3": "이, 이런 것도 하는군요.",
+                        "comments_work_4": "프로듀서, 저 제대로 하고 있나요…?",
+                        "comments_work_max": "OO 쨔마, 저만을 봐주세요….",
+                        "comments_work_love_up": "OO 쨔마, 언제나 지켜봐주시는 거, 기뻐요!",
+                        "comments_live": "갈게요!",
+                        "comments_love_max": "OO 쨔마가 저를 보시는 눈… 무척 두근두근했어요. 이대로 톱 아이돌이 돼서, 시선을 고정시킬게요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1001501/idolcomment.mp3",
@@ -845,20 +845,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "お待たせしましたわね! 桃華の登場ですわ! わたくしの事を待ち望んだ全国のﾌｧﾝ達がいるのですから､それにこたえてあげるのがｱｲﾄﾞﾙの役目! わたくしの愛を皆にﾌﾟﾚｾﾞﾝﾄですわ!",
-                        "comments_my_1": "ごきげんようですわ!",
-                        "comments_my_2": "どこを見ていらして?",
-                        "comments_my_3": "ｳﾌ｡許して差し上げてよ",
-                        "comments_my_4": "OOﾌﾟﾛﾃﾞｭｰｻｰ､この衣装はｱﾅﾀのご趣味?",
-                        "comments_my_max": "OOちゃま､わたくし少し寒いですの｡温めて下さる?",
-                        "comments_work_1": "おはようですの!",
-                        "comments_work_2": "今日もがんばりますわ!",
-                        "comments_work_3": "桃華にお任せなさい!",
-                        "comments_work_4": "OOﾌﾟﾛﾃﾞｭｰｻｰ､終わったら温かいｺｺｱが欲しいですわ",
-                        "comments_work_max": "わたくし､OOちゃまと一緒ならどんな事だって…｡",
-                        "comments_work_love_up": "OOちゃまのおかげで今日も最高のお仕事ですわ!",
-                        "comments_live": "かかりましたわね!",
-                        "comments_love_max": "OOちゃま､聖なる夜にお仕事だなんてｱﾅﾀもついてないですわね! だから､今夜はわたくしが…傍にいてあげますわ!"
+                        "comment": "오래 기다리셨네요! 모모카의 등장이에요! 저를 손꼽아 기다리신 전국의 팬들이 계시니까, 거기에 답해드리는 것이 아이돌의 역할! 제 사랑을 모두에게 선물이에요!",
+                        "comments_my_1": "안녕하셔요!",
+                        "comments_my_2": "어딜 보고 계세요?",
+                        "comments_my_3": "우후. 용서해 주셔요.",
+                        "comments_my_4": "OO 프로듀서, 이 의상은 당신의 취미?",
+                        "comments_my_max": "OO 쨔마, 저 조금 추워요. 따뜻하게 해주시겠어요?",
+                        "comments_work_1": "안녕하세요!",
+                        "comments_work_2": "오늘도 열심히 할게요!",
+                        "comments_work_3": "모모카에게 맡겨주세요!",
+                        "comments_work_4": "OO 프로듀서, 끝나면 따뜻한 코코아를 바라요.",
+                        "comments_work_max": "저, OO 쨔마와 함께라면 어떤 일이라도….",
+                        "comments_work_love_up": "OO 쨔마 덕분에 오늘도 최고의 일이네요!",
+                        "comments_live": "걸렸네요!",
+                        "comments_love_max": "OO 쨔마, 성스러운 밤에 일이라니 당신도 운이 없으시네요! 그러니까, 오늘 밤은 제가… 곁에 있어드릴게요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1101502/idolcomment.mp3",
@@ -928,20 +928,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ﾌﾘﾌﾘな衣装はたくさん持っていますの! 普段､桃華が着ているのはおとなしい方ですわ｡今着ているのはそのひとつ｡OOちゃまだけに秘蔵のｺﾚｸｼｮﾝを見せて差し上げますわ! ",
-                        "comments_my_1": "陽がまぶしいですわ",
-                        "comments_my_2": "西欧から取り寄せたﾚｰｽですの",
-                        "comments_my_3": "ﾎﾞﾝﾈｯﾄ可愛いでしょう?",
-                        "comments_my_4": "わたくし､この衣装大好きですの! よｰく眺めてほしいですわ",
-                        "comments_my_max": "OOちゃまにこの姿を見せられて､うれしいですわ♪",
-                        "comments_work_1": "高貴にいきますわよ",
-                        "comments_work_2": "気品が大切でしてよ",
-                        "comments_work_3": "このﾎﾟｰｽﾞで決まりですわね",
-                        "comments_work_4": "特別な装いだと､笑顔も増えますわ! ﾌｧﾝも大喜びですわね",
-                        "comments_work_max": "OOちゃま､お仕事中はｴｽｺｰﾄしてくださいます?",
-                        "comments_work_love_up": "ふふっ､服の乱れを整えてくれるとは…いい心がけですわよ♪",
-                        "comments_live": "可愛がられて､あげますわ",
-                        "comments_love_max": "いい､これからは服装には気を使いなさい? OOちゃまにはわたくしの隣に相応しくいていただかないと♪"
+                        "comment": "나풀나풀한 의상은 잔뜩 가지고 있어요! 평소, 모모카가 입고 있는 건 수수한 편이에요. 지금 입고 있는 건 그중 하나. OO 쨔마인 만큼 비장의 컬렉션을 보여드릴게요! ",
+                        "comments_my_1": "햇빛이 눈부셔요.",
+                        "comments_my_2": "서양에서 들여온 레이스예요.",
+                        "comments_my_3": "보닛 귀엽죠?",
+                        "comments_my_4": "저, 이 의상 정말 좋아해요! 잘 봐주셨으면 좋겠어요.",
+                        "comments_my_max": "OO 쨔마께 이 모습을 보여드릴 수 있어서, 기뻐요♪",
+                        "comments_work_1": "고귀하게 갈게요.",
+                        "comments_work_2": "기품이 중요해서요.",
+                        "comments_work_3": "이 포즈로 결정이네요.",
+                        "comments_work_4": "특별한 옷차림이면, 미소도 늘어나네요! 팬도 무척 기뻐하시네요.",
+                        "comments_work_max": "OO 쨔마, 일하는 중에 에스코트해주시겠어요?",
+                        "comments_work_love_up": "후훗, 옷이 흐트러진 걸 정돈해주시다니… 좋은 마음가짐이에요♪",
+                        "comments_live": "사랑 받고, 드릴게요.",
+                        "comments_love_max": "좋아, 이제부턴 옷차림엔 신경 써주세요? OO 쨔마께선 제 곁에 걸맞게 계셔주시지 않으면♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1208201/idolcomment.mp3",
@@ -1005,20 +1005,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "どう､OOちゃま? このﾘﾄﾙﾊﾞｰﾄﾞは桃華の衣装でもお気に入りになりそうですわよ｡ｷﾗｷﾗ光る思い出を､愛らしく飛び回って集めたいですわ! 桃華の愛の巣はどこかしら?",
-                        "comments_my_1": "陽がまぶしいですわ",
-                        "comments_my_2": "西欧から取り寄せたﾚｰｽですの",
-                        "comments_my_3": "ｱｸｾｻﾘがたくさんですわ",
-                        "comments_my_4": "お相手してくれないと､小鳥のようにつつきますわよ?",
-                        "comments_my_max": "雨が降ったら…OOちゃまの腕の下で雨宿りですわ",
-                        "comments_work_1": "高貴にいきますわよ",
-                        "comments_work_2": "気品が大切でしてよ",
-                        "comments_work_3": "羽毛が落ちましたわ",
-                        "comments_work_4": "仕事場という鳥ｶｺﾞが､かわいいわたくしを放してくれませんわ",
-                        "comments_work_max": "さすがOOちゃま! この衣装にﾋﾟｯﾀﾘのお仕事ですわ",
-                        "comments_work_love_up": "OOちゃま､お願いが…｡毛づくろいしてくださる?",
-                        "comments_live": "華麗に舞い飛びますわ!",
-                        "comments_love_max": "小鳥はたくさん愛でてもらわないと､羽根のﾂﾔが落ちますの｡OOちゃま､ﾌﾞﾗｯｼﾝｸﾞは愛情を持って行うのがｺﾂですわ"
+                        "comment": "어때요, OO 쨔마? 이 리틀버드는 모모카의 의상으로도 마음에 들 것 같아요. 반짝반짝 빛나는 추억을, 사랑스럽게 날아다니며 모으고 싶어요! 모모카의 사랑의 둥지는 어디일까?",
+                        "comments_my_1": "햇빛이 눈부셔요.",
+                        "comments_my_2": "서양에서 들여온 레이스예요.",
+                        "comments_my_3": "액세서리가 잔뜩이네요.",
+                        "comments_my_4": "상대해주시지 않으면, 작은 새처럼 쪼아버려요?",
+                        "comments_my_max": "비가 내리면… OO 쨔마의 팔 밑에서 그치길 기다려요.",
+                        "comments_work_1": "고귀하게 갈게요.",
+                        "comments_work_2": "기품이 중요해서요.",
+                        "comments_work_3": "깃털이 떨어졌어요.",
+                        "comments_work_4": "일터라는 새장이, 귀여운 저를 놓아주지 않아요.",
+                        "comments_work_max": "역시 OO 쨔마! 이 의상에 딱인 일이예요.",
+                        "comments_work_love_up": "OO 쨔마, 부탁이…. 털을 골라주시겠어요?",
+                        "comments_live": "화려하게 날아갈게요!",
+                        "comments_love_max": "작은 새는 잔뜩 사랑받지 않으면, 깃털의 윤기가 떨어져요. OO 쨔마, 브러싱은 애정을 가지고 하는 게 요령이에요."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1308202/idolcomment.mp3",
@@ -1082,20 +1082,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "わたくしの家にようこそいらっしゃいまし♪ ちょうどいいから打ち合わせついでにお茶の時間にいたしましょ! 忙しいﾌﾟﾛﾃﾞｭｰｻｰもそれくらいの時間はありますでしょ?",
-                        "comments_my_1": "はりきって行きますの!",
-                        "comments_my_2": "ﾛｰｽﾞﾋｯﾌﾟﾃｨｰは美容にもいいの!",
-                        "comments_my_3": "新衣装はどうなりましたの?",
-                        "comments_my_4": "ﾌﾟﾛﾃﾞｭｰｻｰ､お茶もいいですけど打ち合わせもお忘れなくね?",
-                        "comments_my_max": "お見送りして差し上げますわ! OOちゃま♪",
-                        "comments_work_1": "今日の桃華は絶好調ですの!",
-                        "comments_work_2": "差し入れは薔薇の花ですの?",
-                        "comments_work_3": "れ､練習もちゃんとしましたわ!",
-                        "comments_work_4": "もうお仕事に慣れましてよ｡誰のおかげとは言いませんけど♪",
-                        "comments_work_max": "ｳﾌ､OOちゃまとわたくしの仲なんですから､ね?",
-                        "comments_work_love_up": "OOちゃま! ご褒美を考えていて下さいまし､ね?",
-                        "comments_live": "ぬかりはありませんわ!",
-                        "comments_love_max": "OOちゃま､わたくしのお家は気に入りました? 部屋はたくさんあるから住んだっていいんですわよ?"
+                        "comment": "저희 집에 어서 오세요♪ 마침 좋은 때니까 협의하는 김에 티타임을 갖죠! 바쁘신 프로듀서도 그 정도 시간은 있으시죠?",
+                        "comments_my_1": "힘내서 갈게요!",
+                        "comments_my_2": "로즈힙티는 미용에도 좋아요!",
+                        "comments_my_3": "새 의상은 어떻게 됐나요?",
+                        "comments_my_4": "프로듀서, 차도 좋지만 협의도 잊지 말아요?",
+                        "comments_my_max": "배웅해드릴게요! OO 쨔마♪",
+                        "comments_work_1": "오늘의 모모카는 절호조예요!",
+                        "comments_work_2": "새참은 장미꽃인가요?",
+                        "comments_work_3": "여, 연습도 제대로 했어요!",
+                        "comments_work_4": "벌써 일에 익숙해졌어요. 누구 덕분이라곤 말하지 않겠지만요♪",
+                        "comments_work_max": "우후, OO 쨔마와 저 사이니까요, 그렇죠?",
+                        "comments_work_love_up": "OO 쨔마! 포상을 생각해주세요, 알겠죠?",
+                        "comments_live": "실수는 없어요!",
+                        "comments_love_max": "OO 쨔마, 제 집은 마음에 드셨나요? 방은 잔뜩 있으니까 사셔도 괜찮아요?"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1401101/idolcomment.mp3",
@@ -1161,20 +1161,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "わたくしの新衣装､ﾌﾟﾛﾃﾞｭｰｻｰに任せて良かったですわ! とっても素敵♪さぁ､撮影を始めましょう? それにしても…ｳﾌﾌ､この衣装を1番に見られるなんてﾌﾟﾛﾃﾞｭｰｻｰは幸せものですわね!",
-                        "comments_my_1": "はりきって行きますの!",
-                        "comments_my_2": "ﾛｰｽﾞﾋｯﾌﾟﾃｨｰは美容にもいいの!",
-                        "comments_my_3": "お肌のﾉﾘも最高ですわ!",
-                        "comments_my_4": "ｳﾌ､素敵な衣装! OOちゃま良いｾﾝｽですわ♪",
-                        "comments_my_max": "OOちゃま…ｱﾅﾀの笑顔はわたくしのﾓﾉですわ!",
-                        "comments_work_1": "今日の桃華は絶好調ですの!",
-                        "comments_work_2": "差し入れは薔薇の花ですの?",
-                        "comments_work_3": "可愛く撮ってくださいましね♪",
-                        "comments_work_4": "OOちゃまのｱﾄﾞﾊﾞｲｽ通りにしたらｶﾝﾍﾟｷでしたわ!",
-                        "comments_work_max": "OOちゃまはこんな服をわたくしに着せたかったの?",
-                        "comments_work_love_up": "ﾌｧﾝの為にも…OOちゃまの為にもがんばりますわ♪",
-                        "comments_live": "お待たせしましたわ!",
-                        "comments_love_max": "OOちゃまは将来の心配はしなくてもいいですわ｡わたくしがいますからね! どういう意味かは…ｳﾌﾌ♪"
+                        "comment": "제 새 의상, 프로듀서께 맡기길 잘했어요! 무척 근사해요♪ 자, 촬영을 시작하죠? 그건 그렇고… 우후후, 이 의상을 1번째로 볼 수 있다니 프로듀서는 행복하네요!",
+                        "comments_my_1": "힘내서 갈게요!",
+                        "comments_my_2": "로즈힙티는 미용에도 좋아요!",
+                        "comments_my_3": "피부 관리도 최고예요!",
+                        "comments_my_4": "우후, 멋진 의상! OO 쨔마 좋은 센스예요♪",
+                        "comments_my_max": "OO쨔마… 당신의 미소는 제 것이에요!",
+                        "comments_work_1": "오늘의 모모카는 절호조예요!",
+                        "comments_work_2": "새참은 장미꽃인가요?",
+                        "comments_work_3": "사랑스럽게 찍어주세요♪",
+                        "comments_work_4": "OO 쨔마의 어드바이스대로 했더니 완벽했어요!",
+                        "comments_work_max": "OO 쨔마는 이런 옷을 제게 입히고 싶었나요?",
+                        "comments_work_love_up": "팬을 위해서도… OO 쨔마를 위해서도 열심히 할게요♪",
+                        "comments_live": "오래 기다리셨어요!",
+                        "comments_love_max": "OO 쨔마는 장래의 걱정은 하지 않으셔도 괜찮아요. 제가 있으니까요! 어떤 의미일지는… 우후후♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1501102/idolcomment.mp3",
