--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -1246,20 +1246,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "んもう､京都に旅行くらいで舞い上がったりしませんの｡でも､OOちゃまと一緒だったら､きっと楽しいことがいっぱい待っていそうですわね｡さぁ､観光に出発しますわよ?",
-                        "comments_my_1": "たまの和装も良いものですわね",
-                        "comments_my_2": "桃華がｲﾁﾊﾞﾝですのっ!",
-                        "comments_my_3": "きらりさん…大きい…ですわ…",
-                        "comments_my_4": "千枝ちゃん…なかなかやりますわね…｡何でもありませんわ!",
-                        "comments_my_max": "ほら､OOちゃま! 早く…わたくしの隣に座って?",
-                        "comments_work_1": "秋風がいい気分ですわね…",
-                        "comments_work_2": "さぁ､行きますわよ?",
-                        "comments_work_3": "着物には慣れてますの",
-                        "comments_work_4": "わたくしの実力を見くびってもらっては困りますわ!",
-                        "comments_work_max": "OOちゃまにはわたくしのｴｽｺｰﾄをお願いしますわ",
-                        "comments_work_love_up": "OOちゃま､さぁ､手をとってくださる? ほらっ♪",
-                        "comments_live": "失礼いたしますわ",
-                        "comments_love_max": "わたくしの隣はOOちゃまのために空けてますのよ? わたくしのﾌﾟﾛﾃﾞｭｰｻｰ以外､誰が座ると思ってるんですの!"
+                        "comment": "정말, 교토 여행 정도로 날아갈듯 들뜨진 않아요. 그래도, OO 쨔마와 함께라면, 분명 즐거운 일이 잔뜩 기다리고 있을 것 같네요. 자, 관광하러 출발하죠?",
+                        "comments_my_1": "구슬 일본옷도 좋은 거네요.",
+                        "comments_my_2": "모모카가 제일이에요!",
+                        "comments_my_3": "키라리 씨… 커… 요…",
+                        "comments_my_4": "치에 쨩… 제법 하시네요…. 아무것도 아니에요!",
+                        "comments_my_max": "이봐요, OO 쨔마! 빨리… 제 옆에 앉아요?",
+                        "comments_work_1": "가을바람이 좋은 기분이네요…",
+                        "comments_work_2": "자, 갈게요?",
+                        "comments_work_3": "기모노엔 익숙해져 있어요.",
+                        "comments_work_4": "제 실력을 얕보셔서는 곤란해요!",
+                        "comments_work_max": "OO 쨔마껜 제 에스코트를 부탁드려요.",
+                        "comments_work_love_up": "OO 쨔마, 자, 손을 잡아주시겠어요? 자♪",
+                        "comments_live": "실례할게요.",
+                        "comments_love_max": "제 옆은 OO 쨔마를 위해서 비운 거예요? 제 프로듀서 이외에, 누가 앉는다고 생각하는 건가요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1403101/idolcomment.mp3",
@@ -1336,20 +1336,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "この美麗なｽﾃｰｼﾞ､用意してくれたOOちゃま…いえ､ﾌﾟﾛﾃﾞｭｰｻｰには感謝しますわ｡この気持ち､ちゃんと受け取ってくださる? うふ…よろしくてよ｡では､参りますわ♪",
-                        "comments_my_1": "たまの和装も良いものですわね",
-                        "comments_my_2": "桃華がｲﾁﾊﾞﾝですのっ!",
-                        "comments_my_3": "負けませんわ｡ううん､なにも…",
-                        "comments_my_4": "OOちゃまのｾﾝｽ､なかなか悪くありませんわ!",
-                        "comments_my_max": "OOちゃま､京都観光はいかが? 楽しめて? …うふ♪",
-                        "comments_work_1": "秋風がいい気分ですわね…",
-                        "comments_work_2": "さぁ､行きますわよ?",
-                        "comments_work_3": "ﾎﾟｰｽﾞを見てくださる?",
-                        "comments_work_4": "OOちゃまのおかげで､わたくし大活躍ですわ!",
-                        "comments_work_max": "OOちゃまをわたくしのﾄﾘｺにして差し上げますわ♪",
-                        "comments_work_love_up": "OOちゃまに任せるのは､信用しているからですわ♪",
-                        "comments_live": "不可能などありませんわ!",
-                        "comments_love_max": "OOちゃま､わたくしこの街を気に入りましたわ｡次はお仕事ではなく､二人で参りましょうね? 約束ですわ!"
+                        "comment": "이 아름다운 스테이지, 준비해주신 OO 쨔마… 아니, 프로듀서껜 감사해요. 이 기분, 제대로 받아주세요? 우후… 좋아요. 그럼, 갈게요♪",
+                        "comments_my_1": "구슬 일본옷도 좋은 거네요.",
+                        "comments_my_2": "모모카가 제일이에요!",
+                        "comments_my_3": "지지 않아요. 아뇨, 아무것도…",
+                        "comments_my_4": "OO 쨔마의 센스, 꽤 나쁘지 않아요!",
+                        "comments_my_max": "OO 쨔마, 교토 관광은 어땠나요? 즐길 수 있었나요? …우후♪",
+                        "comments_work_1": "가을바람이 좋은 기분이네요…",
+                        "comments_work_2": "자, 갈게요?",
+                        "comments_work_3": "포즈를 봐주시겠어요?",
+                        "comments_work_4": "OO 쨔마 덕분에, 저 대활약이에요!",
+                        "comments_work_max": "OO 쨔마를 제 포로로 만들어드릴게요♪",
+                        "comments_work_love_up": "OO 쨔마께 맡기는 건, 신용하고 있기 때문이에요♪",
+                        "comments_live": "불가능이란 없어요!",
+                        "comments_love_max": "OO 쨔마, 저 이 거리가 마음에 들었어요. 다음엔 일이 아니라, 둘이서 올까요? 약속이에요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1503102/idolcomment.mp3",
