--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -1415,20 +1415,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "結婚式場の庭って､いい雰囲気ですのね｡品があって､わたくしにﾋﾟｯﾀﾘですわ｡はぁ…ﾛｰｽﾞﾋｯﾌﾟﾃｨｰの芳しい香り…OOちゃま､紅茶を淹れるのがお上手になりましたわね♪",
-                        "comments_my_1": "愛は永遠ですのよ♪",
-                        "comments_my_2": "ﾁｬﾍﾟﾙの音色が美しいですわ",
-                        "comments_my_3": "ﾛｰｽﾞﾋｯﾌﾟは肌にいいんですの",
-                        "comments_my_4": "ふふっ､小鳥たちも､仲むつまじい新婚さんを見つめていますわ",
-                        "comments_my_max": "OOちゃま､わたくし…ﾌﾞｰｹを受け取りましたの",
-                        "comments_work_1": "これがわたくしの愛ですわ!",
-                        "comments_work_2": "晴れ姿､たくさん撮れまして?",
-                        "comments_work_3": "くつろぎの一杯ですわ♪",
-                        "comments_work_4": "待ってくれている方がいるから､桃華はがんばれますの",
-                        "comments_work_max": "OOちゃま､このお仕事も二人の大切な思い出ですわ",
-                        "comments_work_love_up": "頼りがいがありますわ｡さすがわたくしのOOちゃま",
-                        "comments_live": "幸せの前奏曲でしてよ?",
-                        "comments_love_max": "またこの結婚式場にﾌﾟﾗｲﾍﾞｰﾄで来たいですわ｡その時は桃華の隣には…OOちゃま､もちろんｴｽｺｰﾄしてくださる?"
+                        "comment": "결혼식장의 정원이란, 좋은 분위기네요. 품위 있고, 제게 딱이에요. 하아… 로즈힙 티의 향기로운 향기… OO 쨔마, 홍차를 달이는 게 능숙해지셨네요♪",
+                        "comments_my_1": "사랑은 영원해요♪",
+                        "comments_my_2": "채플의 음색이 아름다워요.",
+                        "comments_my_3": "로즈힙은 피부에 좋아요.",
+                        "comments_my_4": "후훗, 작은 새들도, 사이좋은 신혼부부를 바라보고 있어요.",
+                        "comments_my_max": "OO 쨔마, 저… 부케를 받았어요.",
+                        "comments_work_1": "이게 제 사랑이에요!",
+                        "comments_work_2": "멋지게 차려입은 모습, 많이 찍으셨나요?",
+                        "comments_work_3": "숨돌리기의 한 잔이에요♪",
+                        "comments_work_4": "기다려주시는 분이 있으니까, 모모카는 열심히 할 수 있어요.",
+                        "comments_work_max": "OO 쨔마, 이 일도 두사람의 소중한 추억이에요.",
+                        "comments_work_love_up": "믿음직스러워요. 과연 저의 OO 쨔마.",
+                        "comments_live": "행복의 전주곡인가요?",
+                        "comments_love_max": "또 이 결혼식장에 개인적으로 오고 싶어요. 그 때 모모카 곁엔… OO 쨔마, 물론 에스코트해주시죠?"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1407101/idolcomment.mp3",
@@ -1494,20 +1494,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ｳﾌﾌ､ついにこの時が来ましたわ! 花嫁桃華､豪華絢爛にﾃﾞﾋﾞｭｰでしてよ♪今日はすべてがわたくしを祝福してますの｡OOちゃま､咲き誇るわたくしの姿､ｶﾒﾗにおさめてくださる?",
-                        "comments_my_1": "愛は永遠ですのよ♪",
-                        "comments_my_2": "ﾁｬﾍﾟﾙの音色が美しいですわ",
-                        "comments_my_3": "絢爛な華やかさでしてよ♪",
-                        "comments_my_4": "わたくしの歩く道は､すべてｳﾞｧｰｼﾞﾝﾛｰﾄﾞになるんですの!",
-                        "comments_my_max": "OOちゃま､腕を組んで…桃華の背が足りませんわ",
-                        "comments_work_1": "これがわたくしの愛ですわ!",
-                        "comments_work_2": "晴れ姿､たくさん撮れまして?",
-                        "comments_work_3": "新婚早々､大活躍ですの♪",
-                        "comments_work_4": "気持ちがこんな高ぶる衣装はないですわ､OOちゃま!",
-                        "comments_work_max": "お仕事の後はふたりでﾊﾈﾑｰﾝですわね､OOちゃま",
-                        "comments_work_love_up": "わたくしたち二人のｺﾞｰﾙに､また一歩近づきましたわ♪",
-                        "comments_live": "愛を教えてあげますわ♪",
-                        "comments_love_max": "桃華は最初に会った時から感じていましたの｡OOちゃまは特別な人と! 二人の記念日をみんなが祝ってくれますわ!"
+                        "comment": "우후후, 드디어 이 때가 왔네요! 신부 모모카, 호화찬란하게 데뷔예요♪ 오늘은 모두가 저를 축복하고 있어요. OO 쨔마, 화려하게 꽃핀 제 모습, 카메라에 담아주시겠어요?",
+                        "comments_my_1": "사랑은 영원해요♪",
+                        "comments_my_2": "채플의 음색이 아름다워요.",
+                        "comments_my_3": "현란한 화려함으로 해주세요♪",
+                        "comments_my_4": "제가 걷는 길은, 전부 버진 로드가 되는 거예요!",
+                        "comments_my_max": "OO 쨔마, 팔짱을 끼고… 모모카의 키가 모자라네요.",
+                        "comments_work_1": "이게 제 사랑이에요!",
+                        "comments_work_2": "멋지게 차려입은 모습, 많이 찍으셨나요?",
+                        "comments_work_3": "신혼 초부터, 대활약이에요♪",
+                        "comments_work_4": "기분이 이렇게 흥분되는 의상은 없어요, OO 쨔마!",
+                        "comments_work_max": "일 끝난 후엔 둘이서 허니문이에요, OO 쨔마.",
+                        "comments_work_love_up": "우리 두사람의 골에, 또 한걸음 다가왔어요♪",
+                        "comments_live": "사랑을 가르쳐드릴게요♪",
+                        "comments_love_max": "모모카는 처음 만났을 때부터 느끼고 있었어요. OO 쨔마는 특별한 사람이라고! 두사람의 기념일을 모두가 축하해줘요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1507102/idolcomment.mp3",
