--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -1093,7 +1093,7 @@ kg
                         "comments_work_3": "여, 연습도 제대로 했어요!",
                         "comments_work_4": "벌써 일에 익숙해졌어요. 누구 덕분이라곤 말하지 않겠지만요♪",
                         "comments_work_max": "우후, OO 쨔마와 저 사이니까요, 그렇죠?",
-                        "comments_work_love_up": "OO 쨔마! 포상을 생각해주세요, 알겠죠?",
+                        "comments_work_love_up": "OO 쨔마! 포상을 생각해주시면 좋겠어요, 알겠죠?",
                         "comments_live": "실수는 없어요!",
                         "comments_love_max": "OO 쨔마, 제 집은 마음에 드셨나요? 방은 잔뜩 있으니까 사셔도 괜찮아요?"
                     },
@@ -1169,7 +1169,7 @@ kg
                         "comments_my_max": "OO 쨔마… 당신의 미소는 제 것이에요!",
                         "comments_work_1": "오늘의 모모카는 절호조예요!",
                         "comments_work_2": "새참은 장미꽃인가요?",
-                        "comments_work_3": "사랑스럽게 찍어주세요♪",
+                        "comments_work_3": "사랑스럽게 찍어주시면 좋겠어요♪",
                         "comments_work_4": "OO 쨔마의 어드바이스대로 했더니 완벽했어요!",
                         "comments_work_max": "OO 쨔마는 이런 옷을 제게 입히고 싶었나요?",
                         "comments_work_love_up": "팬을 위해서도… OO 쨔마를 위해서도 열심히 할게요♪",
@@ -1573,20 +1573,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ふあぁ…もうこんな時間…? 楽しくお話をしていると､時間が経つのはあっという間ですわね…｡んでも､もっとお話したいですわ｡だって…せっかくOOちゃまといっしょですもの",
-                        "comments_my_1": "近くにいらしてもよくってよ",
-                        "comments_my_2": "薔薇のように美しき色ですわ",
-                        "comments_my_3": "このﾊﾟｼﾞｬﾏはお気に入りですの",
-                        "comments_my_4": "OOちゃまはまだ眠くありませんの? 大人ですわね…",
-                        "comments_my_max": "OOちゃま､寂しいのならここにいてもいいですわよ",
-                        "comments_work_1": "薔薇の香水は乙女の嗜みですわ",
-                        "comments_work_2": "豪華なのもいいでしょう?",
-                        "comments_work_3": "お話がお上手ですのね♪",
-                        "comments_work_4": "OOちゃま､わたくしすこし疲れてしまいましたわ",
-                        "comments_work_max": "OOちゃまの前だとつい安らいでしまいますわね",
-                        "comments_work_love_up": "このお部屋はわたくしとOOちゃまだけのものですわ",
-                        "comments_live": "そろそろ…おやすみですわ",
-                        "comments_love_max": "もうすこしお話を…お仕事ではﾌﾟﾛﾃﾞｭｰｻｰに戻ってしまうでしょう? 今はわたくしだけのOOちゃまですもの…"
+                        "comment": "후아아… 벌써 이런 시간…? 즐겁게 얘기를 나누다보면, 시간이 지나는 게 눈깜짝할 새네요…. 그래도, 더 얘기하고 싶어요. 그야… 모처럼 OO 쨔마와 함께인 걸요.",
+                        "comments_my_1": "가까이 오셔도 좋아요.",
+                        "comments_my_2": "장미처럼 아름다운 색이에요.",
+                        "comments_my_3": "이 파자마는 마음에 드는 거예요.",
+                        "comments_my_4": "OO 쨔마는 아직 졸리지 않나요? 어른이시네요…",
+                        "comments_my_max": "OO 쨔마, 쓸쓸하시다면 여기에 계셔도 좋아요.",
+                        "comments_work_1": "장미 향수는 소녀의 소양이에요.",
+                        "comments_work_2": "호화로운 것도 좋죠?",
+                        "comments_work_3": "이야기가 능숙하시네요♪",
+                        "comments_work_4": "OO 쨔마, 저 조금 피곤해져버렸어요.",
+                        "comments_work_max": "OO 쨔마의 앞이라 어느덧 안심해버리네요.",
+                        "comments_work_love_up": "이 방은 저와 OO 쨔마만의 것이에요.",
+                        "comments_live": "슬슬… 잘자요.",
+                        "comments_love_max": "조금 더 얘기를… 일에선 프로듀서로 돌아가버리겠죠? 지금은 저만의 OO 쨔마인 걸요…"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1414801/idolcomment.mp3",
@@ -1652,20 +1652,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ｳﾌ､わたくしにふさわしいｽﾃｰｼﾞですわね｡でもわたくしはどんなにきらびやかなｾｯﾄにだって負けませんの｡OOちゃまの育てた赤い薔薇は華やかに､そして美しく咲き誇りますわ♪",
-                        "comments_my_1": "近くにいらしてもよくってよ",
-                        "comments_my_2": "薔薇のように美しき色ですわ",
-                        "comments_my_3": "たまには…頼ってくださいまし",
-                        "comments_my_4": "どんな豪華でも､花の一つもない場所は寂しいものでしょう",
-                        "comments_my_max": "OOちゃま､降りるときは手を取って導いてくださる?",
-                        "comments_work_1": "薔薇の香水は乙女の嗜みですわ",
-                        "comments_work_2": "豪華なのもいいでしょう?",
-                        "comments_work_3": "このｽﾃｰｼﾞは輝いていますわ",
-                        "comments_work_4": "ﾌｧﾝのみなさんをﾄﾘｺにしてしまうほどの魅力は罪かしら｡ｳﾌﾌ♪",
-                        "comments_work_max": "わたくしがOOちゃまも輝かせてさしあげますわ♪",
-                        "comments_work_love_up": "OOちゃまだけの赤い薔薇も悪くないですわ｡ｳﾌﾌ",
-                        "comments_live": "桃華の華をご覧になって",
-                        "comments_love_max": "わたくしが自分らしく輝けるのはOOちゃまのおかげ｡わたくしを咲かせるその手腕､これからも期待していますわ♪"
+                        "comment": "우후, 제게 어울리는 스테이지네요. 그래도 저는 아무리 찬란한 세트라 해도 지지 않아요. OO 쨔마가 키우신 붉은 장미는 화려하게, 그리고 아름답게 피어나요♪",
+                        "comments_my_1": "가까이 오셔도 좋아요.",
+                        "comments_my_2": "장미처럼 아름다운 색이에요.",
+                        "comments_my_3": "가끔은… 의지해주시면 좋을텐데.",
+                        "comments_my_4": "아무리 호화롭더라도, 꽃이 하나도 없는 장소는 쓸쓸한 법이겠죠.",
+                        "comments_my_max": "OO 쨔마, 내려갈 때는 손을 잡고 이끌어주세요?",
+                        "comments_work_1": "장미 향수는 소녀의 소양이에요.",
+                        "comments_work_2": "호화로운 것도 좋죠?",
+                        "comments_work_3": "이 스테이지는 빛나고 있어요.",
+                        "comments_work_4": "팬 여러분을 포로로 만들 정도의 매력은 죄일지도. 우후후♪",
+                        "comments_work_max": "제가 OO 쨔마도 빛나게 해드릴게요♪",
+                        "comments_work_love_up": "OO 쨔마만의 붉은 장미도 나쁘지 않아요. 우후후.",
+                        "comments_live": "모모카의 꽃을 봐주시길.",
+                        "comments_love_max": "제가 자신답게 빛날 수 있는 건 OO 쨔마 덕분. 저를 꽃피울 수 있는 그 수완, 앞으로도 기대하고 있어요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1514802/idolcomment.mp3",
@@ -1731,20 +1731,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "OOちゃま｡これはわたくしのﾁｮｺﾚｰﾄ作りを手伝ってくれたお礼ですの｡ですから､なにも遠慮することはありませんわ｡さぁ､ｺﾚがほしいのでしょう? ｳﾌ､かわいいですわ♪",
-                        "comments_my_1": "特別な日にしてさしあげますわ",
-                        "comments_my_2": "やはり手作りですわよね",
-                        "comments_my_3": "感想を聞かせてくださる?",
-                        "comments_my_4": "お菓子作りはがんばって覚えましたの｡上手に出来ましたわ♪",
-                        "comments_my_max": "このﾀﾙﾄは特別に甘いと思いますの｡ね､OOちゃま♪",
-                        "comments_work_1": "桃華の味を､存分に味わって",
-                        "comments_work_2": "お口に幸せを運びますわ",
-                        "comments_work_3": "甘い香りが付きましたわ",
-                        "comments_work_4": "お菓子作りは大変ですわ｡でもこれでﾌｧﾝも喜びますわよね♪",
-                        "comments_work_max": "またOOちゃまと､ふたりでｷｯﾁﾝに立ちたいですわね",
-                        "comments_work_love_up": "OOちゃま｡一緒にお菓子作り､楽しかったですの?",
-                        "comments_live": "これも特別ですわ♪",
-                        "comments_love_max": "OOちゃま､わたくしの手作りﾁｮｺﾚｰﾄを､誰よりも早く食べた感想は…いえ､いいですわ｡顔で分かりますもの♪"
+                        "comment": "OO 쨔마. 이건 제 초콜릿 만들기를 도와주신 답례예요. 그러니까, 아무것도 사양하실 필요는 없어요. 자, 이걸 원하시죠? 우후, 귀여우셔요♪",
+                        "comments_my_1": "특별한 날로 만들어드릴게요.",
+                        "comments_my_2": "역시 수제네요.",
+                        "comments_my_3": "감상을 들려주실래요?",
+                        "comments_my_4": "과자 만들기는 열심히 배웠어요. 솜씨좋게 해냈어요♪",
+                        "comments_my_max": "이 타르트는 특별히 달다고 생각해요. 그렇죠, OO 쨔마♪",
+                        "comments_work_1": "모모카의 맛을, 마음껏 맛보시길.",
+                        "comments_work_2": "입으로 행복을 가져다 드릴게요.",
+                        "comments_work_3": "달콤한 향기가 뱄어요.",
+                        "comments_work_4": "과자만들기는 힘들어요. 하지만 이걸로 팬도 기뻐하시겠죠♪",
+                        "comments_work_max": "또 OO 쨔마와, 둘이서 주방에 서고 싶네요.",
+                        "comments_work_love_up": "OO 쨔마. 함께 과자 만들기, 즐거우셨나요?",
+                        "comments_live": "이것도 특별해요♪",
+                        "comments_love_max": "OO 쨔마, 제 수제 초콜릿을, 누구보다도 빨리 드신 감상은… 아뇨, 괜찮아요. 얼굴로 알 수 있는 걸요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1421901/idolcomment.mp3",
@@ -1810,20 +1810,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "このわたくしのﾁｮｺﾚｰﾄがほしくて? いいですわ｡替わりにｱﾅﾀ方のﾊｰﾄを頂きますわ｡さぁ､覚悟のできた方から､手を伸ばしてらして｡わたくしから甘い幸せをさしあげます♪",
-                        "comments_my_1": "特別な日にしてさしあげますわ",
-                        "comments_my_2": "やはり手作りですわよね",
-                        "comments_my_3": "薔薇の園に住む小悪魔ですの",
-                        "comments_my_4": "大胆に､そしてｴﾚｶﾞﾝﾄに｡これが心を惑わす小悪魔の魅力ですわ",
-                        "comments_my_max": "わたくし､OOちゃまのﾊｰﾄはもう頂いてますわ｡ｳﾌﾌ♪",
-                        "comments_work_1": "桃華の味を､存分に味わって",
-                        "comments_work_2": "お口に幸せを運びますわ",
-                        "comments_work_3": "熱い想いに溶けてしまいますわ",
-                        "comments_work_4": "わたくしのﾁｮｺは特別ですわ｡甘くとろける誘惑の味ですの",
-                        "comments_work_max": "OOちゃま､わたくしのﾊｰﾄも一緒に…なんて､ｳﾌﾌ♪",
-                        "comments_work_love_up": "慌てなくとも､OOちゃまは味わったでしょう?",
-                        "comments_live": "薔薇の香りも添えて…",
-                        "comments_love_max": "最後のﾁｮｺﾚｰﾄはOOちゃまへ｡わたくしの込めた甘い想いごと受け取って､美味しく食べてくださいな♪"
+                        "comment": "이 저의 초콜릿이 갖고 싶으셔서? 좋아요. 대신에 여러분의 하트를 받을게요. 자, 각오가 된 분부터, 손을 뻗어주시길. 저로부터의 달콤한 행복을 드릴게요♪",
+                        "comments_my_1": "특별한 날로 만들어드릴게요.",
+                        "comments_my_2": "역시 수제네요.",
+                        "comments_my_3": "장미 정원에 사는 소악마예요.",
+                        "comments_my_4": "대담하게, 그리고 엘레강트하게. 이게 마음을 현혹하는 소악마의 매력이에요.",
+                        "comments_my_max": "저, OO 쨔마의 하트는 이미 받았어요. 우후후♪",
+                        "comments_work_1": "모모카의 맛을, 마음껏 맛보시길.",
+                        "comments_work_2": "입으로 행복을 가져다 드릴게요.",
+                        "comments_work_3": "뜨거운 생각에 녹아버려요.",
+                        "comments_work_4": "저의 초코는 특별해요. 달콤하게 녹는 유혹의 맛이에요.",
+                        "comments_work_max": "OO 쨔마, 저의 하트도 함께… 라니, 우후후♪",
+                        "comments_work_love_up": "당황하지 않으셔도, OO 쨔마는 맛보셨죠?",
+                        "comments_live": "장미 향기도 곁들여서…",
+                        "comments_love_max": "마지막 초콜릿은 OO 쨔마께. 제가 담은 달콤한 추억과 같이 받아서, 맛있게 드셔주세요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1521902/idolcomment.mp3",
