--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -928,7 +928,7 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "나풀나풀한 의상은 잔뜩 가지고 있어요! 평소, 모모카가 입고 있는 건 수수한 편이에요. 지금 입고 있는 건 그중 하나. OO 쨔마인 만큼 비장의 컬렉션을 보여드릴게요! ",
+                        "comment": "나풀나풀한 의상은 잔뜩 가지고 있어요! 평소, 모모카가 입고 있는 건 수수한 편이에요. 지금 입고 있는 건 그중 하나. OO 쨔마인 만큼 비장의 컬렉션을 보여드릴게요!",
                         "comments_my_1": "햇빛이 눈부셔요.",
                         "comments_my_2": "서양에서 들여온 레이스예요.",
                         "comments_my_3": "보닛 귀엽죠?",
@@ -1251,7 +1251,7 @@ kg
                         "comments_my_2": "모모카가 제일이에요!",
                         "comments_my_3": "키라리 씨… 커… 요…",
                         "comments_my_4": "치에 쨩… 제법 하시네요…. 아무것도 아니에요!",
-                        "comments_my_max": "이봐요, OO 쨔마! 빨리… 제 옆에 앉아요?",
+                        "comments_my_max": "보세요, OO 쨔마! 어서… 제 옆에 앉아요?",
                         "comments_work_1": "가을바람이 좋은 기분이네요…",
                         "comments_work_2": "자, 갈게요?",
                         "comments_work_3": "기모노엔 익숙해져 있어요.",
